// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Tabs Compact 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kSZjsO StyledTabs-a4fwxl-2 bDoHYe sc-edoYdd cgpscD sc-jlIlqL iEUOqq"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bjBOvl StyledTabs__StyledTabsHeader-a4fwxl-0 drFjkF"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 ckmUZO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 yEOHg StyledTab-sc-1nnwnsb-0 Nlsgy"
          >
            <span
              class="StyledText-sc-1sadyjn-0 dXBIz"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ckmUZO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jvaJyk StyledTab-sc-1nnwnsb-0 Nlsgy"
          >
            <span
              class="StyledText-sc-1sadyjn-0 frAKea"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ckmUZO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jvaJyk StyledTab-sc-1nnwnsb-0 Nlsgy"
          >
            <span
              class="StyledText-sc-1sadyjn-0 frAKea"
            >
              Tab 3
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ckmUZO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jvaJyk StyledTab-sc-1nnwnsb-0 Nlsgy"
          >
            <span
              class="StyledText-sc-1sadyjn-0 frAKea"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ckmUZO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jvaJyk StyledTab-sc-1nnwnsb-0 Nlsgy"
          >
            <span
              class="StyledText-sc-1sadyjn-0 frAKea"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ckmUZO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jvaJyk StyledTab-sc-1nnwnsb-0 Nlsgy"
          >
            <span
              class="StyledText-sc-1sadyjn-0 frAKea"
            >
              And this is a third very long tab name testing
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        class="StyledTabs__StyledTabPanel-a4fwxl-1 iSBXKq"
        role="tabpanel"
      >
        <div
          class="sc-fKFxtB eNMjwF sc-bBXrwG gvzEro"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tabs Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kSZjsO StyledTabs-a4fwxl-2 bDoHYe sc-edoYdd wbWTu sc-jlIlqL iEUOqq"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bjBOvl StyledTabs__StyledTabsHeader-a4fwxl-0 drFjkF"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 ckmUZO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 yEOHg StyledTab-sc-1nnwnsb-0 Nlsgy"
          >
            <span
              class="StyledText-sc-1sadyjn-0 dXBIz"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ckmUZO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jvaJyk StyledTab-sc-1nnwnsb-0 Nlsgy"
          >
            <span
              class="StyledText-sc-1sadyjn-0 frAKea"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ckmUZO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jvaJyk StyledTab-sc-1nnwnsb-0 Nlsgy"
          >
            <span
              class="StyledText-sc-1sadyjn-0 frAKea"
            >
              Tab 3
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        class="StyledTabs__StyledTabPanel-a4fwxl-1 iSBXKq"
        role="tabpanel"
      >
        <div
          class="sc-fKFxtB eNMjwF sc-bBXrwG gvzEro"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tabs With Long Titles 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kSZjsO StyledTabs-a4fwxl-2 bDoHYe sc-edoYdd wbWTu sc-jlIlqL iEUOqq"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bjBOvl StyledTabs__StyledTabsHeader-a4fwxl-0 drFjkF"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 ckmUZO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 yEOHg StyledTab-sc-1nnwnsb-0 Nlsgy"
          >
            <span
              class="StyledText-sc-1sadyjn-0 dXBIz"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ckmUZO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jvaJyk StyledTab-sc-1nnwnsb-0 Nlsgy"
          >
            <span
              class="StyledText-sc-1sadyjn-0 frAKea"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ckmUZO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jvaJyk StyledTab-sc-1nnwnsb-0 Nlsgy"
          >
            <span
              class="StyledText-sc-1sadyjn-0 frAKea"
            >
              And this is a third very long tab name
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="This is a very long tab name Tab Contents"
        class="StyledTabs__StyledTabPanel-a4fwxl-1 iSBXKq"
        role="tabpanel"
      >
        <div
          class="sc-fKFxtB eNMjwF sc-bBXrwG gvzEro"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;
